src/objects/Complaint__c.object
<CustomObject>
    <fields>
        <fullName>Addressed_to_Trustee_by_name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addressed to Trustee by name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addressed_to__c</fullName>
        <label>Addressed to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <label>Advocate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correspondence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Correspondence</label>
        <referenceTo>Correspondance__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_status__c</fullName>
        <description>Status of the complaint.</description>
        <label>Current status</label>
        <picklist>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_acknowledged__c</fullName>
        <description>The data a complaint was acknowledged.</description>
        <label>Date acknowledged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_closed__c</fullName>
        <description>Date the complaint was closed.</description>
        <label>Date closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_received__c</fullName>
        <label>Date received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details_of_complaint__c</fullName>
        <label>Details of complaint</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holding_letter__c</fullName>
        <label>Holding letter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigating_officer__c</fullName>
        <label>Investigating officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_delay__c</fullName>
        <label>Reason for delay</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Received_by__c</fullName>
        <label>Received by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMT_Chief_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMT/Chief Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Services__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_user_Complainant__c</fullName>
        <label>Service user / Complainant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustees_Chair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trustees/Chair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of complaint</description>
        <inlineHelpText>Type of complaint</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goverance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locality Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_complaint__c</fullName>
        <label>Type of complaint</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Value Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locality Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_received__c</columns>
        <columns>Addressed_to__c</columns>
        <columns>Service_user_Complainant__c</columns>
        <columns>Complaint_logged__c</columns>
        <columns>File_complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Complaints Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>